--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,11 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   # 타임리프 캐시 무효화
   thymeleaf:
     cache: false
+
+  # mybatis 설정
+  mybatis:
+    mapper-location: mapper/*.xml
